--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,80 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 
 # Database
-supabase==2.16.0
-asyncpg==0.29.0
-sqlalchemy[asyncio]==2.0.23
-alembic==1.13.1
+supabase>=2.16.0
+asyncpg>=0.29.0
+sqlalchemy[asyncio]>=2.0.23
+alembic>=1.13.0
 
 # Vector embeddings
-pgvector==0.2.4
-sentence-transformers==2.2.2
-openai==1.3.7
+pgvector>=0.2.4
+sentence-transformers>=2.2.0
+openai>=1.3.0
 
 # Background tasks
-celery[redis]==5.3.4
-redis==5.0.1
+celery[redis]>=5.3.0
+redis>=5.0.0
 
 # Web scraping & crawling
-requests==2.31.0
-httpx==0.25.2
-beautifulsoup4==4.12.2
-lxml==4.9.3
-selectolax==0.3.17
-playwright==1.40.0
-selenium==4.15.2
+requests>=2.31.0
+httpx>=0.25.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+selectolax>=0.3.0
+playwright>=1.40.0
+selenium>=4.15.0
 
 # Content processing
-spacy==3.7.2
-langdetect==1.0.9
-readability==0.3.1
-newspaper3k==0.2.8
-feedparser==6.0.10
-python-dateutil==2.8.2
+spacy>=3.7.0
+langdetect>=1.0.0
+readability>=0.3.0
+newspaper3k>=0.2.8
+feedparser>=6.0.0
+python-dateutil>=2.8.0
 
 # Search engines
-google-search-results==2.4.2
-duckduckgo-search==3.9.6
-googlesearch-python==1.2.3
+google-search-results>=2.4.0
+duckduckgo-search>=3.9.0
+googlesearch-python>=1.2.0
 
 # ML & NLP
-scikit-learn==1.3.2
-numpy==1.24.4
-pandas==2.1.4
-nltk==3.8.1
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.1.0
+nltk>=3.8.0
 
 # Monitoring & logging
-prometheus-client==0.19.0
-structlog==23.2.0
-loguru==0.7.2
+prometheus-client>=0.19.0
+structlog>=23.2.0
+loguru>=0.7.0
 
 # HTTP clients & utilities
-aiohttp==3.9.1
-tenacity==8.2.3
-fake-useragent==1.4.0
+aiohttp>=3.9.0
+tenacity>=8.2.0
+fake-useragent>=1.4.0
 
 # Security & validation
-cryptography==41.0.8
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
+cryptography>=42.0.0
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.6
 
 # Configuration
-python-dotenv==1.0.0
-PyYAML==6.0.1
+python-dotenv>=1.0.0
+PyYAML>=6.0.0
 
 # Development & testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.1
-pre-commit==3.6.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+black>=23.11.0
+flake8>=6.1.0
+mypy>=1.7.0
+pre-commit>=3.6.0
 
 # Production
-gunicorn==21.2.0
-whitenoise==6.6.0
+gunicorn>=21.2.0
+whitenoise>=6.6.0
